# uv-tools-migration

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  pytest.ini
.github/workflows/: python-package-ci.yml
tests/: helpers.py  test_sources_toml_render.py  test_uv_tools_migration.py
tests/fixtures/: Pipfile  Pipfile_expected.toml  Pipfile_no_dev_and_packages  Pipfile_no_dev_packages  Pipfile_no_equals_version_in_dev_packages  Pipfile_no_equals_version_in_packages  Pipfile_no_git  Pipfile_no_packages  Pipfile_no_packages_expected.toml  pyproject.toml
tests/fixtures/no_dev_packages/: pyproject.toml
tests/fixtures/sources_toml_render/ok/: sources.toml
tests/fixtures/uv_tools_migration/no_equals_version_in_dev_and_packages/: Pipfile
uv_tools_migration/: __init__.py  renders.py
uv_tools_migration/templates/: sources.toml.tpl
