[project]
name = "uv-tools-migration"
version = "2025.06.08"
description = "Migrate any projects from pipenv to uv without pain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]
